# llm-gateway-framework

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HLD.md  LLD.md  README.md  TODO.md  docker-compose.yml  docker.sh  main.py  openapi.json  openapi.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: auth.py  config.py  db.py  main.py  metrics.py  rate_limit.py  state.py
app/api/gateway/: admin.py  health.py
app/api/v1/: chat.py  models.py
app/clients/: gitleaks.py  presidio.py
app/pipeline/: base.py  scoring.py
app/pipeline/post/: pii_output.py
app/pipeline/pre/: pii_input.py  policy.py  prompt_injection.py  secret_detection.py
app/providers/: anthropic.py  base.py  google.py  ollama.py  openai.py  router.py
app/schemas/: gateway.py  openai_compat.py
config/: fallbacks.yaml  policies.yaml.example
services/gitleaks-sidecar/: Dockerfile  main.py
tests/: conftest.py  test_api.py  test_openai_contract.py  test_pipeline_pre.py
usage/: config-anthropic.env  config-google.env  config-hybrid.env  config-multi-cloud.env  config-ollama-docker.env  config-ollama-external.env  config-openai.env  config-strict-security.env  curl-examples.sh  python-client.py
