[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-api-gateway"
version = "0.1.0"
description = "Open-source AI API Gateway with multi-provider routing and OWASP LLM security guardrails"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "openai>=2.0,<3.0",
    "anthropic>=0.28,<1.0",
    "google-genai>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "slowapi>=0.1.9,<0.2",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "aiosqlite>=0.20,<1.0",
    "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
